Fixed cube and logo on mobile

--- a/sass/_page-home.scss
+++ b/sass/_page-home.scss
@@ -15,9 +15,9 @@
 }
 
 .homepage-logo {
-    margin-top: 36px;
+    margin-top: 28px;
     margin-right: 0;
-    font-size: 10rem;
+    font-size: 6rem;
 }
 
 /* cube */
